<resources>
    <string name="app_name">FavouriteDishes</string>
    <string name="title_all_dishes">All Dishes</string>
    <string name="title_favourite_dishes">Favourite Dishes</string>
    <string name="title_random_dish">Random Dishes</string>
    <string name="title_details_dish">Details Dishes</string>
    <string name="favourite_dishes">Favourite Dishes</string>
    <string name="add_dish">Add Dish</string>
    <string name="edit_dish">Edit Dish</string>
    <string name="update_dish">Update Dish</string>
    <string name="delete_dish">Delete Dish</string>
    <string name="share_dish">Share Dish</string>
    <string name="image">image</string>
    <string name="title">Title</string>
    <string name="type">Type</string>
    <string name="category">Category</string>
    <string name="ingredients">Ingredients</string>
    <string name="cooking_time_in_minutes">Cooking Time In Minutes</string>
    <string name="direction_to_cook">Direction to Cook</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="select_image_action">Select Image Action</string>
    <string name="select_dish_type">Select Dish Type</string>
    <string name="select_dish_category">Select Dish Category</string>
    <string name="select_cooking_time">Select Cooking Time In Minutes</string>
    <string name="no_dishes_added_yet">No Dishes Added Yet</string>
    <string name="no_fav_dishes_added_yet">No Favourite Dishes Added Yet</string>
    <string name="dish_title">Dish Title</string>
    <string name="estimate_cooking_time">The approx time required to cook is %1$s minutes</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sure">Are you sure that you want to delete it?</string>
    <string name="filter">Filter</string>
    <string name="select_filter">Select Item to Filter</string>
    <string name="favourite_added">Added to your favourites!</string>
    <string name="already">This dish has already been added to your favourites!</string>
    <string name="please_wait">Please wait…</string>
    <string name="notification_title">Checkout new dish recipe!</string>
    <string name="notification_subtitle">Tap for more details</string>
</resources>